# gtfo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gtfo.hpp
Collision/: Entity.hpp  EntityPointTunnel.hpp  Manipulator.hpp  ManipulatorPoints.hpp  Obstacle.hpp  Point.hpp  Scene.hpp  SceneTunnel.hpp  Segment.hpp  VirtualTunnel.hpp  VirtualTunnelElbow.hpp  VirtualTunnelWrist.hpp
Constraints/: ManifoldConstraints.hpp
Core/: DynamicsBase.hpp  FirstOrderDynamics.hpp  ModelArray.hpp  ModelBase.hpp  PointMassFirstOrder.hpp  PointMassSecondOrder.hpp  SecondOrderDynamics.hpp  VirtualSystem.hpp
Core/Bounds/: BoundBase.hpp  BoundExpression.hpp  NormBound.hpp  RectangleBound.hpp  SoftBoundPhysics.hpp  SurfaceNormals.hpp
Core/Collision/: Entity.hpp  Manipulator.hpp  Obstacle.hpp  Scene.hpp  Segment.hpp
Core/Constraints/: ManifoldConstraints.hpp
Core/Containers/: DynamicsSelector.hpp  DynamicsVector.hpp
Core/Filters/: ButterworthLowPassFilter.hpp  DiscreteTimeFilter.hpp  RateLimiter.hpp
Core/Models/: ConstantVelocityModel.hpp  DynamicsBase.hpp  HomingModel.hpp  PointMassBase.hpp  PointMassFirstOrder.hpp  PointMassSecondOrder.hpp  RandomPositions.hpp  RigidBodySecondOrder.hpp  RotationSecondOrder.hpp
Core/Models/Mujoco/: MujocoModel.hpp  arms.xml
Core/Models/Mujoco/Samples/: arms.xml  rectangle.xml
Core/Utils/: Algorithms.hpp  BooleanExpression.hpp  CircularBuffer.hpp  ClosestVector.hpp  Comparisons.hpp  Constants.hpp  Containers.hpp  Functions.hpp  UtilityFunctions.hpp
Mujoco/: readme.md
Mujoco/sample/: bionics_main.cpp  bionics_simulate.cpp  bionics_simulate.h
Mujoco/xml/: bionics_lab_arm.xml
Tests/: CMakeLists.txt  CMakeSmokeTest.cpp  CollisionAvoidanceTest.cpp  CollisionDetectionTest.cpp  CollisionsTest.cpp  DynamicsPauseTest.cpp  DynamicsSelectorTest.cpp  DynamicsVectorTest.cpp  FiltersTest.cpp  ForcePremodifierTest.cpp  HardBoundExpressionsTest.cpp  HardBoundsTest.cpp  HomingModelTest.cpp  ManifoldBoundariesTest.cpp  ManifoldConstraintsTest.cpp  MujocoBasicModelsTest.cpp  MujocoModelTest.cpp  MujocoRendererTest.cpp  NormBoundTest.cpp  RectangleBoundTest.cpp  RigidBodyDynamicsTest.cpp  RotationalDynamicsTest.cpp  SecondOrderDynamicsTest.cpp  VelocityLimitTest.cpp
Wrapper/: MujocoRenderer.hpp  MujocoWrapper.hpp
include/: gtfo.hpp
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
